# lab

igor/: parameterChange.pxp
igor/parameterChange/: parameterChange.pxp
igor/parameterChange/backup/: centerAf++.itx
visualStudio/MyLibrary/AndorSIF/: 94968.SIF  (+12 more)
visualStudio/MyLibrary/ccgsl/: Makefile.am  blas.hpp  block.hpp  block_char.hpp  block_complex.hpp  block_complex_float.hpp  block_complex_long_double.hpp  block_float.hpp  block_int.hpp  block_long.hpp  block_long_double.hpp  block_short.hpp  block_uchar.hpp  block_uint.hpp  block_ulong.hpp  block_ushort.hpp  complex.hpp  complex_float.hpp  complex_long_double.hpp  exception.hpp  fujii_matrix_notation.hpp  linalg.hpp  matrix.hpp  matrix_char.hpp  matrix_complex.hpp  matrix_complex_float.hpp  matrix_complex_long_double.hpp  matrix_float.hpp  matrix_int.hpp  matrix_long.hpp  matrix_long_double.hpp  matrix_short.hpp  matrix_uchar.hpp  matrix_uint.hpp  matrix_ulong.hpp  matrix_ushort.hpp  mode.hpp  permutation.hpp  permute.hpp  permute_vector.hpp  (+38 more)
visualStudio/Tikhonov_nonlin_study/: Af.itx  ExpConfig.h  Lf.itx  Tikhonov.cpp  Tikhonov_basic1.sdf  Tikhonov_basic1.sln  Tikhonov_basic1.vcxproj.filters
visualStudio/gsl_lib_Win32/: cblas.lib
visualStudio/gsl_lib_x64/: cblas.lib
研究保存フォルダ/Tikhonov_nonlin2D_study/: ExpConfig.cpp  Tikhonov.cpp  Tikhonov2D.cpp  Tikhonov2D.h  Tikhonov_basic1.vcxproj  Tikhonov_basic1.vcxproj.filters  input.txt  main.cpp
研究保存フォルダ/Tikhonov_nonlin3D_kx_study/: ExpConfig.cpp  Tikhonov3D.cpp  Tikhonov_basic1.sln  Tikhonov_basic1.vcxproj  Tikhonov_basic1.vcxproj.filters  input.txt  main.cpp
研究保存フォルダ/Tikhonov_nonlin3D_kxlam_study/: ExpConfig.cpp  ExpConfig.h  Tikhonov3D.cpp  Tikhonov3D.h  main.cpp  作業内容.txt
研究保存フォルダ/Tikhonov_nonlin_study/: ExpConfig.cpp  Tikhonov.h  Tikhonov_basic1.vcxproj  f.itx  main.cpp
(+3367 files in other folders)
